syntax = "proto3";
option java_package = "club.bayview.smoothieweb.models.testdata";
option java_outer_classname = "StoredTestData";

message TestDataBatchCase {
    string input = 1;
    string expectedOutput = 2;
    int64 batchNum = 3;
    int64 caseNum = 4;
}

message TestDataBatch {
    repeated TestDataBatchCase case = 1;
    int64 batchNum = 2;
    int64 pointsWorth = 3;
}

message TestData {
    repeated TestDataBatch batch = 1;
}